whatap_kube_containerd_1.16.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whatap-monitoring
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: whatap-node-agent
  namespace: whatap-monitoring
  labels:
    name: whatap-node-agent
spec:
  selector:
    matchLabels:
      name: whatap-node-agent
  template:
    metadata:
      labels:
        name: whatap-node-agent
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      containers:
        - name: whatap-node-helper
          image: whatap/kube_mon
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 350Mi
              cpu: 200m
          ports:
            - name: helperport
              containerPort: 6801
          command: ['/data/agent/node/cadvisor_helper', '-port','6801']
          volumeMounts:
            - name: containerddomainsocket
              mountPath: /run/containerd/containerd.sock
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: hostsys
              mountPath: /sys
              readOnly: true
            - name: hostdiskdevice
              mountPath: /dev/disk
              readOnly: true
        - name: whatap-node-agent
          image: whatap/kube_mon
          resources:
            requests:
              memory: 300Mi
              cpu: 100m
            limits:
              memory: 350Mi
              cpu: 200m
          ports:
            - name: nodeport
              containerPort: 6600
          command: ['/bin/entrypoint.sh']
          volumeMounts:
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: start-script-volume
              mountPath: /bin/entrypoint.sh
              readOnly: true
              subPath: entrypoint.sh
            - mountPath: /whatap_conf
              name: whatap-config-volume
      volumes:
        - hostPath:
            path: /run/containerd/containerd.sock
          name: containerddomainsocket
        - hostPath:
            path: /
          name: rootfs
        - hostPath:
            path: /sys
          name: hostsys
        - hostPath:
            path: /dev/disk
          name: hostdiskdevice
        - name: start-script-volume
          configMap:
            defaultMode: 0700
            name: node-start-script
        - name: whatap-config-volume
          emptyDir: {}
      serviceAccount: whatap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatap-master-agent
  namespace: whatap-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      name: whatap-master-agent
  template:
    metadata:
      labels:
        name: whatap-master-agent
    spec:
      containers:
        - name: whatap-master-agent
          image: whatap/kube_mon
          resources:
            requests:
              memory: 300Mi
              cpu: 100m
            limits:
              memory: 350Mi
              cpu: 200m
          ports:
            - containerPort: 6600
          command: ['/bin/entrypoint.sh']
          volumeMounts:
            - name: start-script-volume
              mountPath: /bin/entrypoint.sh
              readOnly: true
              subPath: entrypoint.sh
            - mountPath: /whatap_conf
              name: whatap-config-volume              
      volumes:
        - name: start-script-volume
          configMap:
            defaultMode: 0700
            name: master-start-script
        - name: whatap-config-volume
          emptyDir: {}
      serviceAccount: whatap
---
apiVersion: v1
kind: Service
metadata:
  namespace: whatap-monitoring
  labels:
    run: whatap-master-agent
  name: whatap-master-agent
spec:
  clusterIP: None
  ports:
    - port: 6600
      protocol: TCP
      name: tcp-whatap-master-agent
    - port: 6800
      protocol: TCP
      name: tcp-whatap-confbase
  selector:
    name: whatap-master-agent
