backingress.yaml
---
# ingress_수정
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal  # internet-facing에서 internal로 변경
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backservice
              port:
                number: 80
...
